<resources>
    <string name="app_name">Seminar3</string>
    <string name="LOGIN">LOGIN</string>
    <string name="회원가입">회원가입</string>
    <string name="sopt">SOPT</string>
    <string name="이름">이름</string>
    <string name="아이디">아이디</string>
    <string name="비밀번호">비밀번호</string>
    <string name="signup">회원가입 완료</string>
    <string name="input_name">이름을 입력해주세요.</string>
    <string name="input_id">아이디를 입력해주세요.</string>
    <string name="input_pw">비밀번호를 입력해주세요.</string>
    <string name="image">이미지</string>
    <string name="first_fragment">첫 번째 프래그먼트</string>
    <string name="second_fragment">두 번째 프래그먼트</string>
    <string name="third_fragment">세 번째 프래그먼트</string>
    <string name="profile">프로필</string>
    <string name="list">리스트</string>
    <string name="setting">설정</string>
    <string name="follower_list">팔로워 목록</string>
    <string name="repo_list">레포지토리 목록</string>
    <string name="instagram_id">\@ur_lemonmin</string>
    <string name="intro">안드 YB</string>
    <string name="my_name">Jimin Yu</string>
    <string name="github">GitHub</string>
    <string name="temp">준비중입니다</string>
    <string name="menu_home">홈</string>
    <string name="menu_profile">프로필</string>
    <string name="menu_camera">카메라</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>