<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_follower"
        android:layout_width="158dp"
        android:layout_height="wrap_content"
        android:text="@string/follower_list"
        android:background="@drawable/select_btn"
        android:fontFamily="@font/noto_sans_kr_medium"
        android:textColor="@color/selector_bottom_navi"
        android:paddingStart="45dp"
        android:paddingEnd="45dp"
        android:paddingTop="13dp"
        android:paddingBottom="13dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="11dp"
        app:layout_constraintEnd_toStartOf="@id/btn_repository"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_instagram"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_repository"
        android:layout_width="163dp"
        android:layout_height="wrap_content"
        android:text="@string/repo_list"
        android:layout_marginTop="44dp"
        android:background="@drawable/select_btn"
        android:textColor="@color/selector_bottom_navi"
        android:fontFamily="@font/noto_sans_kr_medium"
        android:paddingStart="34dp"
        android:paddingEnd="35dp"
        android:paddingTop="13dp"
        android:paddingBottom="13dp"
        app:layout_constraintStart_toEndOf="@id/btn_follower"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_instagram"
        />

    <ImageView
        android:id="@+id/iv_photo"
        android:layout_width="80dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="140dp"
        android:layout_marginRight="140dp"
        android:src="@drawable/photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintWidth_percent="0.35"
        android:contentDescription="@string/image"
        />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/my_name"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:fontFamily="@font/noto_sans_kr_bold"
        app:layout_constraintTop_toBottomOf="@+id/iv_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tv_instagram"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instagram_id"
        android:textSize="14sp"
        android:fontFamily="@font/noto_sans_kr_regular"
        android:gravity="center"
        android:layout_marginTop="3dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_name"
        app:layout_constraintStart_toStartOf="@id/tv_name"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tv_intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intro"
        android:textSize="14sp"
        android:fontFamily="@font/noto_sans_kr_medium"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginTop="11dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_instagram"
        app:layout_constraintStart_toStartOf="@id/tv_instagram"
        />
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_profile"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_repository"
        />
</androidx.constraintlayout.widget.ConstraintLayout>